fixed weird info text spacing

--- a/res/html/assets/css/mobilestyle.css
+++ b/res/html/assets/css/mobilestyle.css
@@ -125,7 +125,7 @@ body {
 .difficulty-info-text p {
     margin: 0;
     margin-right: 10px;
-    margin-left: calc(100vw - 200px);
+    margin-left: calc(100vw - 220px);
 }
 
 #quicksearch {
